--- a/01 pagina personal/contacto.html
+++ b/01 pagina personal/contacto.html
@@ -14,14 +14,7 @@
 
 </head>
 <body>
-    <div class="wellcome">
-        <div class="wellcome-video">
-            <video autoplay muted loop class="myVideo">
-                <source src="video/maquina-liquen.mp4" type="video/mp4">
-            </video>
-        </div>
-        <div class=wellcome-header>
-            <header>
+    <header>
         <a href="index.html"><img class="logotipo" src="img/logo_ maquina-liquen.svg" alt="Logotipo bOrrOsOgráfico"></a>
 
         <nav class="navbar">
@@ -44,15 +37,31 @@
                 </ul>
             </div>
           </nav>
-            </header>
-        </div>    
-    </div>
-    <!-- <main>
-        <div>
-            <h2>Bienvenido a máquina-liquen, una visión diferente de entender la arquitectura</h2>
-            <img class="portada" src="img/portada.jpg" alt="">
-        </div>
-    </main> -->
+    </header>
+
+    <main>
+        <img class="cabecera" src="img/cabecera_ml03.jpg" alt="">
+        <section class="container">
+            <h1 class="images">Habla con nosotros :-):</h1><br>
+
+            <label for="nombre"><h2 class="pretitle">Nombre:</h2></label>
+            <input type="text" class="input" name="nombre" id="nombre" autofocus><br>
+
+            <label for="e-mail"><h2 class="pretitle">E-mail:</h2></label>
+            <input type="email" class="input" name="e-mail" id="e-mail"><br>
+
+            <label for="descripcion"><h2 class="pretitle">Escribe algo sobre ti:</h2></label>
+            <textarea name="descripcion" class="input" id="descripcion" style="resize: none;"></textarea><br>
+
+            <input type="button" value="Enviar" class="send"><br>
+        </section>
+    </main>
+
+    <footer>
+        <h5 class="name">Jesús Ágreda Ruano</h5>
+        <h6 class="contact">+34 687 28 65 19<br>proyectos@maquina-liquen.com</h6>
+    </footer>
+
 
 
 
