--- a/01 pagina personal/filosofia.html
+++ b/01 pagina personal/filosofia.html
@@ -10,12 +10,12 @@
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
 </head>
 <body>
     <header>
-        <a href="#index"><img class="logotipo" src="img/logo_ maquina-liquen.svg" alt="Logotipo bOrrOsOgráfico"></a>
+        <a href="index.html"><img class="logotipo" src="img/logo_ maquina-liquen.svg" alt="Logotipo bOrrOsOgráfico"></a>
 
         <nav class="navbar">
             <label for="menuboton">
@@ -26,21 +26,13 @@
             <div class="menu">
                 <ul>
                     <li>
-                        <a href="#listado">proyecto</a><br>
-                    </li>
-                    <li class="porfolio">
-                        <a href="#formularios">archivo</a>
-                        <ul>
-                            <li><a href="#formularios">AAAAAAAAA</a></li><br>
-                            <li><a href="#formularios">BBBBB</a></li><br>
-                            <li><a href="#formularios">CCCCCC</a></li><br>
-                        </ul>
+                        <a href="proyectos.html">proyectos</a><br>
                     </li>
                     <li>
-                        <a href="contact.html" id="special">máquina-liquen</a>
+                        <a href="filosofia.html" id="special">filosofía</a>
                     </li>
                     <li>
-                        <a href="contact.html" id="special">info</a>
+                        <a href="contacto.html" id="special">contacto</a>
                     </li>
                 </ul>
             </div>
@@ -50,7 +42,7 @@
     <main>
         <img class="cabecera" src="img/cabecera_ml.jpg" alt="">
         <section class="container">
-            <h3 class="pretitle">máquina-liquen</h3>
+            <h2 class="pretitle">máquina-liquen</h2>
             <h1 class="title">híbridos arquitectónicos</h1>
             <article class="text">
                 <p>Según la rae, una máquina es un «agregado de diversas partes ordenadas entre sí y dirigidas a la formación de un todo»», una «traza o proyecto de pura imaginación» o un «edificio grande y suntuoso» y un liquen es en «organismo resultante de la simbiosis de hongos con algas que se extiende sobre las rocas y las cortezas de los árboles». Por su lado, una máquina requiere de la mano humana para crear energía; la vida de un liquen gira en torno a los dictados de la naturaleza, crece al amparo de las lluvias y se petrifica al calor del sol.<br>De la unión entre ellos nace la arquitectura híbrida de «máquina–liquen», entendiendo híbrido como el «producto de elementos de distinta naturaleza». Idea, diseño y técnica se hibridan con el entorno a través del terreno, creando ecosistemas en los que se desarrolla la vida humana, sus acciones y sus obras. «máquina–liquen» sabe que los espacios mutan y se amoldan a nuevas necesidades y realidades, pero siendo siempre respetuoso con la raíz y mirando hacia el futuro y entendiendo la casa no solo como una vivienda, sino también como una máquina, un espacio productivo y un generador de sinergias entre espacio, ocupantes y herramientas.<br>Las bases del proyecto arquitectónico de «máquina–liquen» son el humanismo, la modernidad, el respeto hacia el entorno y la coherencia entre función y espacio. Híbridos arquitectónicos con un pie en la raíz y otro en el futuro.<br>«máquina–liquen» lo formamos un grupo multifuncional que aporta al proyecto diferentes ángulos de visión y abarca el control de las diferentes fases de desarrollo de un espacio habitable desde su origen.</p><br>
@@ -59,8 +51,8 @@
     </main>
 
     <footer>
-        <h2>Footer</h2>
-        <p>llentesque, diam non sollicitudin gravida, lectus augue porta nisi, ut malesuada nisl ex vitae nisi. Sed nisi magna</p>
+        <h5 class="name">Jesús Ágreda Ruano</h5>
+        <h6 class="contact">+34 687 28 65 19<br>proyectos@maquina-liquen.com</h6>
     </footer>
 
 
