--- a/filosofia.html
+++ b/filosofia.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>máquina-liquen</title>
 
     <link rel="stylesheet" href="css/normalize.css">
 
@@ -15,13 +15,13 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><img class="logotipo" src="img/logo_ maquina-liquen.svg" alt="Logotipo bOrrOsOgráfico"></a>
+        <a href="index.html"><img class="logotipo" src="img/logo_maquina-liquen.svg" alt="Logotipo bOrrOsOgráfico"></a>
 
         <nav class="navbar">
             <label for="menuboton">
                 <img class="boton" src="img/boton.svg" alt="botón +">
             </label>
-            <input type="checkbox" name="" id="menuboton">
+            <input type="checkbox" name="checkbox" id="menuboton">
 
             <div class="menu">
                 <ul>
@@ -29,22 +29,22 @@
                         <a href="proyectos.html">proyectos</a><br>
                     </li>
                     <li>
-                        <a href="filosofia.html" id="special">filosofía</a>
+                        <a href="filosofia.html">filosofía</a>
                     </li>
                     <li>
-                        <a href="contacto.html" id="special">contacto</a>
+                        <a href="contacto.html">contacto</a>
                     </li>
                 </ul>
             </div>
-          </nav>
+        </nav>
     </header>
 
     <main>
         <img class="cabecera" src="img/cabecera_ml.jpg" alt="">
         <section class="container">
-            <h2 class="pretitle">máquina-liquen</h2>
-            <h1 class="title">híbridos arquitectónicos</h1>
             <article class="text">
+                <h2 class="pretitle">máquina-liquen</h2>
+                <h1>híbridos arquitectónicos</h1>
                 <p>Según la rae, una máquina es un «agregado de diversas partes ordenadas entre sí y dirigidas a la formación de un todo»», una «traza o proyecto de pura imaginación» o un «edificio grande y suntuoso» y un liquen es en «organismo resultante de la simbiosis de hongos con algas que se extiende sobre las rocas y las cortezas de los árboles». Por su lado, una máquina requiere de la mano humana para crear energía; la vida de un liquen gira en torno a los dictados de la naturaleza, crece al amparo de las lluvias y se petrifica al calor del sol.<br>De la unión entre ellos nace la arquitectura híbrida de «máquina–liquen», entendiendo híbrido como el «producto de elementos de distinta naturaleza». Idea, diseño y técnica se hibridan con el entorno a través del terreno, creando ecosistemas en los que se desarrolla la vida humana, sus acciones y sus obras. «máquina–liquen» sabe que los espacios mutan y se amoldan a nuevas necesidades y realidades, pero siendo siempre respetuoso con la raíz y mirando hacia el futuro y entendiendo la casa no solo como una vivienda, sino también como una máquina, un espacio productivo y un generador de sinergias entre espacio, ocupantes y herramientas.<br>Las bases del proyecto arquitectónico de «máquina–liquen» son el humanismo, la modernidad, el respeto hacia el entorno y la coherencia entre función y espacio. Híbridos arquitectónicos con un pie en la raíz y otro en el futuro.<br>«máquina–liquen» lo formamos un grupo multifuncional que aporta al proyecto diferentes ángulos de visión y abarca el control de las diferentes fases de desarrollo de un espacio habitable desde su origen.</p><br>
             </article>
         </section>
@@ -54,9 +54,5 @@
         <h5 class="name">Jesús Ágreda Ruano</h5>
         <h6 class="contact">+34 687 28 65 19<br>proyectos@maquina-liquen.com</h6>
     </footer>
-
-
-
-
 </body>
 </html>
