--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>máquina-liquen</title>
 
     <link rel="stylesheet" href="css/normalize.css">
 
@@ -22,39 +22,30 @@
         </div>
         <div class=wellcome-header>
             <header>
-        <a href="index.html"><img class="logotipo" src="img/logo_ maquina-liquen.svg" alt="Logotipo bOrrOsOgráfico"></a>
+                <a href="index.html"><img class="logotipo" src="img/logo_maquina-liquen.svg" alt="Logotipo bOrrOsOgráfico"></a>
 
-        <nav class="navbar">
-            <label for="menuboton">
-                <img class="boton" src="img/boton.svg" alt="botón +">
-            </label>
-            <input type="checkbox" name="" id="menuboton">
+                <nav class="navbar">
+                    <label for="menuboton">
+                        <img class="boton" src="img/boton.svg" alt="botón +">
+                    </label>
+                    <input type="checkbox" name="checkbox" id="menuboton">
 
-            <div class="menu">
-                <ul>
-                    <li>
-                        <a href="proyectos.html">proyectos</a><br>
-                    </li>
-                    <li>
-                        <a href="filosofia.html" id="special">filosofía</a>
-                    </li>
-                    <li>
-                        <a href="contacto.html" id="special">contacto</a>
-                    </li>
-                </ul>
-            </div>
-          </nav>
+                    <div class="menu">
+                        <ul>
+                            <li>
+                                <a href="proyectos.html">proyectos</a><br>
+                            </li>
+                            <li>
+                                <a href="filosofia.html">filosofía</a>
+                            </li>
+                            <li>
+                                <a href="contacto.html">contacto</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
             </header>
         </div>    
     </div>
-    <!-- <main>
-        <div>
-            <h2>Bienvenido a máquina-liquen, una visión diferente de entender la arquitectura</h2>
-            <img class="portada" src="img/portada.jpg" alt="">
-        </div>
-    </main> -->
-
-
-
 </body>
 </html>
