--- a/proyectos.html
+++ b/proyectos.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>máquina-liquen</title>
 
     <link rel="stylesheet" href="css/normalize.css">
 
@@ -15,13 +15,13 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><img class="logotipo" src="img/logo_ maquina-liquen.svg" alt="Logotipo bOrrOsOgráfico"></a>
+        <a href="index.html"><img class="logotipo" src="img/logo_maquina-liquen.svg" alt="Logotipo bOrrOsOgráfico"></a>
 
         <nav class="navbar">
             <label for="menuboton">
                 <img class="boton" src="img/boton.svg" alt="botón +">
             </label>
-            <input type="checkbox" name="" id="menuboton">
+            <input type="checkbox" name="checkbox" id="menuboton">
 
             <div class="menu">
                 <ul>
@@ -29,14 +29,14 @@
                         <a href="proyectos.html">proyectos</a><br>
                     </li>
                     <li>
-                        <a href="filosofia.html" id="special">filosofía</a>
+                        <a href="filosofia.html">filosofía</a>
                     </li>
                     <li>
-                        <a href="contacto.html" id="special">contacto</a>
+                        <a href="contacto.html">contacto</a>
                     </li>
                 </ul>
             </div>
-          </nav>
+        </nav>
     </header>
 
     <main>
@@ -49,27 +49,27 @@
                 </article>
                 <article class="projects">
                     <img class="projects" src="img/casa_castagno.jpg" alt="">
-                    <h1 class="images">casa del castaño</h1>
+                    <h1>casa del castaño</h1>
                     <p class="dates">2020-21 / Villarino de Sanabria. Zamora</p>
                 </article>
                 <article class="projects">
                     <img class="projects" src="img/instalacion_musac.jpg" alt="">
-                    <h1 class="images">raíces de León</h1>
+                    <h1>raíces de León</h1>
                     <p class="dates">2017 / MUSAC. León</p>
                 </article>
                 <article class="projects">
                     <img class="projects" src="img/casa_la_latina.jpg" alt="">
-                    <h1 class="images">casa Latina II</h1>
+                    <h1>casa Latina II</h1>
                     <p class="dates">2018 / Salamanca</p>
                 </article>
                 <article class="projects">
                     <img class="projects" src="img/cotijo_la_juliana.jpg" alt="">
-                    <h1 class="images">cortijo La Juliana</h1>
+                    <h1>cortijo La Juliana</h1>
                     <p class="dates">2018 / Bollullos de la Mitación. Sevilla</p>
                 </article>
                 <article class="projects">
                     <img class="projects" src="img/finca_los_barros.jpg" alt="">
-                    <h1 class="images">finca Los Barros</h1>
+                    <h1>finca Los Barros</h1>
                     <p class="dates">2020 / Boadilla del Monte. Madrid</p>
                 </article> 
             </div>                   
@@ -77,12 +77,8 @@
     </main>
 
     <footer>
-        <h5 class="name">Jesús Ágreda Ruano</h5>
-        <h6 class="contact">+34 687 28 65 19<br>proyectos@maquina-liquen.com</h6>
+        <h5>Jesús Ágreda Ruano</h5>
+        <h6>+34 687 28 65 19<br>proyectos@maquina-liquen.com</h6>
     </footer>
-
-
-
-
 </body>
 </html>
