--- a/contacto.html
+++ b/contacto.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>máquina-liquen</title>
 
     <link rel="stylesheet" href="css/normalize.css">
 
@@ -15,13 +15,13 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><img class="logotipo" src="img/logo_ maquina-liquen.svg" alt="Logotipo bOrrOsOgráfico"></a>
+        <a href="index.html"><img class="logotipo" src="img/logo_maquina-liquen.svg" alt="Logotipo bOrrOsOgráfico"></a>
 
         <nav class="navbar">
             <label for="menuboton">
                 <img class="boton" src="img/boton.svg" alt="botón +">
             </label>
-            <input type="checkbox" name="" id="menuboton">
+            <input type="checkbox" name="checkbox" id="menuboton">
 
             <div class="menu">
                 <ul>
@@ -29,28 +29,28 @@
                         <a href="proyectos.html">proyectos</a><br>
                     </li>
                     <li>
-                        <a href="filosofia.html" id="special">filosofía</a>
+                        <a href="filosofia.html">filosofía</a>
                     </li>
                     <li>
-                        <a href="contacto.html" id="special">contacto</a>
+                        <a href="contacto.html">contacto</a>
                     </li>
                 </ul>
             </div>
-          </nav>
+        </nav>
     </header>
 
     <main>
         <img class="cabecera" src="img/cabecera_ml03.jpg" alt="">
-        <section class="container">
-            <h1 class="images">Habla con nosotros :-):</h1><br>
+        <section class="contact">
+            <h1>contacta con nosotros :-)</h1><br>
 
-            <label for="nombre"><h2 class="pretitle">Nombre:</h2></label>
-            <input type="text" class="input" name="nombre" id="nombre" autofocus><br>
+            <label for="nombre" class="label">nombre:</label>
+            <input type="text" class="input" name="nombre" id="nombre"><br>
 
-            <label for="e-mail"><h2 class="pretitle">E-mail:</h2></label>
+            <label for="e-mail" class="label">e-mail:</label>
             <input type="email" class="input" name="e-mail" id="e-mail"><br>
 
-            <label for="descripcion"><h2 class="pretitle">Escribe algo sobre ti:</h2></label>
+            <label for="descripcion" class="label">escribe tu mensaje:</label>
             <textarea name="descripcion" class="input" id="descripcion" style="resize: none;"></textarea><br>
 
             <input type="button" value="Enviar" class="send"><br>
@@ -61,9 +61,5 @@
         <h5 class="name">Jesús Ágreda Ruano</h5>
         <h6 class="contact">+34 687 28 65 19<br>proyectos@maquina-liquen.com</h6>
     </footer>
-
-
-
-
 </body>
 </html>
